--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+KEYSTORE_PASSWORD=#AbkiBaar400Paar
+KEY_ALIAS=shortsblocker_release_key
+KEY_PASSWORD=#AbkiBaar400Paar
