--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,11 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
+    <uses-permission
+        android:name="android.permission.CAPTURE_VIDEO_OUTPUT"
+        android:protectionLevel="signature"
+        tools:ignore="ProtectedPermissions"
+        />
 
     <application
         android:allowBackup="true"
@@ -32,6 +36,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.PermissionRequestActivity"
+            android:exported="false" />
+
         <service
             android:name=".accessibility.VideoBlockerService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
@@ -45,5 +52,19 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
+        <service
+            android:name=".service.PersistentService"
+            android:foregroundServiceType="mediaProjection"
+            android:exported="false" />
+
+        <receiver android:name=".receiver.AccessibilityStatusReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.gvw.shortsblocker.ACCESSIBILITY_STATUS_CHANGED" />
+            </intent-filter>
+        </receiver>
+
+
+
     </application>
 </manifest>
