Upgraded version name and version code

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,5 @@ android.nonTransitiveRClass=true
 KEYSTORE_PASSWORD=#AbkiBaar400Paar
 KEY_ALIAS=shortsblocker_release_key
 KEY_PASSWORD=#AbkiBaar400Paar
+VERSION_CODE=1000
+VERSION_NAME=2.0.0
